rust/macros/tests/ui/fail/undefined_role.stderr
error: role 'C' is not declared in protocol roles
 --> tests/ui/fail/undefined_role.rs:6:14
  |
6 |         A -> C: Ping;
  |              ^
